src/bin/snapshots/antlr4_rust_gen__tests__antlr4rust_compat_accessor_collision.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: collision
---
antlr4rust compatibility accessor `item_all` in CollisionContext is ambiguous between parser rule `item` and parser rule `item_all`
