src/bin/snapshots/antlr4_rust_gen__tests__antlr4rust_compat_reserved_accessors.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: rendered
---
    #[allow(non_snake_case)]
    pub fn item_all(&self) -> Vec<ItemContext<'a>> {
        self.item_children().collect()
    }
    #[allow(non_snake_case)]
    pub fn text(&self) -> Option<TextContext<'a>> {
        self.text_rule_child()
    }
    #[allow(non_snake_case)]
    pub fn required(&self) -> Option<RequiredContext<'a>> {
        self.required_rule_child().ok()
    }
    #[allow(non_snake_case)]
    pub fn r#type(&self) -> Option<TypeContext<'a>> {
        self.type_rule_child()
    }
    #[allow(non_snake_case)]
    pub fn ID(&self) -> Option<TerminalNode<'a>> {
        self.id_token().ok()
    }
    #[allow(non_snake_case)]
    pub fn IDS_all(&self) -> Vec<TerminalNode<'a>> {
        self.ids_tokens().collect()
    }
