src/bin/snapshots/antlr4_rust_gen__tests__compiles_token_set_transitions.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: compiled
---
[
    (
        "range",
        Some(
            (
                Some(
                    MatchSet {
                        token_set: None,
                        intervals: [
                            (
                                2,
                                4,
                            ),
                        ],
                        follow_state: 7,
                    },
                ),
                7,
            ),
        ),
    ),
    (
        "set",
        Some(
            (
                Some(
                    MatchSet {
                        token_set: None,
                        intervals: [
                            (
                                1,
                                1,
                            ),
                            (
                                5,
                                6,
                            ),
                        ],
                        follow_state: 8,
                    },
                ),
                8,
            ),
        ),
    ),
    (
        "not_set",
        Some(
            (
                Some(
                    MatchNotSet {
                        token_set: None,
                        intervals: [
                            (
                                1,
                                1,
                            ),
                        ],
                        follow_state: 9,
                    },
                ),
                9,
            ),
        ),
    ),
    (
        "dense_set",
        Some(
            (
                Some(
                    MatchSet {
                        token_set: Some(
                            0,
                        ),
                        intervals: [
                            (
                                1,
                                1,
                            ),
                            (
                                3,
                                3,
                            ),
                            (
                                5,
                                5,
                            ),
                            (
                                7,
                                7,
                            ),
                            (
                                9,
                                9,
                            ),
                            (
                                11,
                                11,
                            ),
                            (
                                13,
                                13,
                            ),
                            (
                                15,
                                15,
                            ),
                            (
                                17,
                                17,
                            ),
                            (
                                19,
                                19,
                            ),
                            (
                                21,
                                21,
                            ),
                            (
                                23,
                                23,
                            ),
                            (
                                25,
                                25,
                            ),
                            (
                                27,
                                27,
                            ),
                            (
                                29,
                                29,
                            ),
                            (
                                31,
                                31,
                            ),
                            (
                                33,
                                33,
                            ),
                            (
                                35,
                                35,
                            ),
                            (
                                37,
                                37,
                            ),
                            (
                                39,
                                39,
                            ),
                            (
                                41,
                                41,
                            ),
                            (
                                43,
                                43,
                            ),
                            (
                                45,
                                45,
                            ),
                            (
                                47,
                                47,
                            ),
                            (
                                49,
                                49,
                            ),
                            (
                                51,
                                51,
                            ),
                            (
                                53,
                                53,
                            ),
                            (
                                55,
                                55,
                            ),
                            (
                                57,
                                57,
                            ),
                            (
                                59,
                                59,
                            ),
                            (
                                61,
                                61,
                            ),
                            (
                                63,
                                63,
                            ),
                            (
                                65,
                                65,
                            ),
                            (
                                67,
                                67,
                            ),
                            (
                                69,
                                69,
                            ),
                            (
                                71,
                                71,
                            ),
                            (
                                73,
                                73,
                            ),
                            (
                                75,
                                75,
                            ),
                            (
                                77,
                                77,
                            ),
                            (
                                79,
                                79,
                            ),
                            (
                                81,
                                81,
                            ),
                            (
                                83,
                                83,
                            ),
                            (
                                85,
                                85,
                            ),
                            (
                                87,
                                87,
                            ),
                            (
                                89,
                                89,
                            ),
                            (
                                91,
                                91,
                            ),
                            (
                                93,
                                93,
                            ),
                            (
                                95,
                                95,
                            ),
                            (
                                97,
                                97,
                            ),
                            (
                                99,
                                99,
                            ),
                            (
                                101,
                                101,
                            ),
                            (
                                103,
                                103,
                            ),
                            (
                                105,
                                105,
                            ),
                            (
                                107,
                                107,
                            ),
                            (
                                109,
                                109,
                            ),
                            (
                                111,
                                111,
                            ),
                            (
                                113,
                                113,
                            ),
                            (
                                115,
                                115,
                            ),
                            (
                                117,
                                117,
                            ),
                            (
                                119,
                                119,
                            ),
                            (
                                121,
                                121,
                            ),
                            (
                                123,
                                123,
                            ),
                            (
                                125,
                                125,
                            ),
                            (
                                127,
                                127,
                            ),
                            (
                                129,
                                129,
                            ),
                            (
                                131,
                                131,
                            ),
                            (
                                133,
                                133,
                            ),
                            (
                                135,
                                135,
                            ),
                            (
                                137,
                                137,
                            ),
                            (
                                139,
                                139,
                            ),
                            (
                                141,
                                141,
                            ),
                            (
                                143,
                                143,
                            ),
                            (
                                145,
                                145,
                            ),
                            (
                                147,
                                147,
                            ),
                            (
                                149,
                                149,
                            ),
                            (
                                151,
                                151,
                            ),
                            (
                                153,
                                153,
                            ),
                            (
                                155,
                                155,
                            ),
                            (
                                157,
                                157,
                            ),
                            (
                                159,
                                159,
                            ),
                            (
                                161,
                                161,
                            ),
                            (
                                163,
                                163,
                            ),
                            (
                                165,
                                165,
                            ),
                            (
                                167,
                                167,
                            ),
                            (
                                169,
                                169,
                            ),
                            (
                                171,
                                171,
                            ),
                            (
                                173,
                                173,
                            ),
                            (
                                175,
                                175,
                            ),
                            (
                                177,
                                177,
                            ),
                            (
                                179,
                                179,
                            ),
                            (
                                181,
                                181,
                            ),
                            (
                                183,
                                183,
                            ),
                            (
                                185,
                                185,
                            ),
                            (
                                187,
                                187,
                            ),
                            (
                                189,
                                189,
                            ),
                            (
                                191,
                                191,
                            ),
                            (
                                193,
                                193,
                            ),
                            (
                                195,
                                195,
                            ),
                            (
                                197,
                                197,
                            ),
                            (
                                199,
                                199,
                            ),
                            (
                                201,
                                201,
                            ),
                            (
                                203,
                                203,
                            ),
                            (
                                205,
                                205,
                            ),
                            (
                                207,
                                207,
                            ),
                            (
                                209,
                                209,
                            ),
                            (
                                211,
                                211,
                            ),
                            (
                                213,
                                213,
                            ),
                            (
                                215,
                                215,
                            ),
                            (
                                217,
                                217,
                            ),
                            (
                                219,
                                219,
                            ),
                            (
                                221,
                                221,
                            ),
                            (
                                223,
                                223,
                            ),
                            (
                                225,
                                225,
                            ),
                            (
                                227,
                                227,
                            ),
                            (
                                229,
                                229,
                            ),
                            (
                                231,
                                231,
                            ),
                            (
                                233,
                                233,
                            ),
                            (
                                235,
                                235,
                            ),
                            (
                                237,
                                237,
                            ),
                            (
                                239,
                                239,
                            ),
                            (
                                241,
                                241,
                            ),
                            (
                                243,
                                243,
                            ),
                            (
                                245,
                                245,
                            ),
                            (
                                247,
                                247,
                            ),
                            (
                                249,
                                249,
                            ),
                            (
                                251,
                                251,
                            ),
                            (
                                253,
                                253,
                            ),
                            (
                                255,
                                255,
                            ),
                        ],
                        follow_state: 8,
                    },
                ),
                8,
            ),
        ),
    ),
]
