src/bin/snapshots/antlr4_rust_gen__tests__complete_ll1_dispatches.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: classification.complete_ll1_dispatches
---
{
    0: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            2,
                            2,
                        ),
                    ],
                },
            ],
        },
        default_alt: None,
    },
    1: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            -1,
                            -1,
                        ),
                    ],
                },
            ],
        },
        default_alt: None,
    },
    2: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            -1,
                            -1,
                        ),
                    ],
                },
            ],
        },
        default_alt: None,
    },
    3: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            -1,
                            -1,
                        ),
                    ],
                },
            ],
        },
        default_alt: None,
    },
    4: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            -1,
                            -1,
                        ),
                    ],
                },
            ],
        },
        default_alt: Some(
            2,
        ),
    },
    5: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            -1,
                            -1,
                        ),
                    ],
                },
            ],
        },
        default_alt: Some(
            2,
        ),
    },
    6: CompleteLl1Dispatch {
        fast_path: GeneratedDecisionFastPath {
            arms: [
                GeneratedDecisionFastArm {
                    alt: 1,
                    intervals: [
                        (
                            1,
                            1,
                        ),
                    ],
                },
                GeneratedDecisionFastArm {
                    alt: 2,
                    intervals: [
                        (
                            -1,
                            -1,
                        ),
                    ],
                },
            ],
        },
        default_alt: Some(
            2,
        ),
    },
}
