src/bin/snapshots/antlr4_rust_gen__tests__context_label_selection_reconciliation.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: "[(\"empty\", reconcile_context_label_selections(&[])),\n(\"unanimous nth\", reconcile_context_label_selections(&unanimous_nth),),\n(\"unanimous list\", reconcile_context_label_selections(&unanimous_list),),\n(\"promote zero\", reconcile_context_label_selections(&promote_zero),),\n(\"promote one\", reconcile_context_label_selections(&promote_one),),\n(\"different skips\", reconcile_context_label_selections(&different_skips),),\n(\"unsafe nth\", reconcile_context_label_selections(&unsafe_nth),),\n(\"incompatible modes\",\nreconcile_context_label_selections(&incompatible_modes),),]"
---
[
    (
        "empty",
        None,
    ),
    (
        "unanimous nth",
        Some(
            Nth(
                2,
            ),
        ),
    ),
    (
        "unanimous list",
        Some(
            AllAfter(
                1,
            ),
        ),
    ),
    (
        "promote zero",
        Some(
            LastAfter(
                0,
            ),
        ),
    ),
    (
        "promote one",
        Some(
            LastAfter(
                1,
            ),
        ),
    ),
    (
        "different skips",
        None,
    ),
    (
        "unsafe nth",
        None,
    ),
    (
        "incompatible modes",
        None,
    ),
]
