src/bin/snapshots/antlr4_rust_gen__tests__context_surface_name_collision.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: names
---
ContextSurfaceNames {
    rules: [
        ContextSurfaceName {
            context_type: "PrimaryExpressionStartContext",
            listener_method: "primary_expression_start",
            visitor_method: "primary_expression_start",
        },
        ContextSurfaceName {
            context_type: "ObjectCreationExpressionContext",
            listener_method: "object_creation_expression",
            visitor_method: "object_creation_expression",
        },
        ContextSurfaceName {
            context_type: "EveryRuleContext",
            listener_method: "every_rule_rule",
            visitor_method: "every_rule",
        },
        ContextSurfaceName {
            context_type: "StoredTreeRuleContext",
            listener_method: "stored_tree",
            visitor_method: "stored_tree",
        },
        ContextSurfaceName {
            context_type: "ValidatedTreeRuleContext",
            listener_method: "validated_tree",
            visitor_method: "validated_tree",
        },
    ],
    views: [
        ContextViewName {
            surface: ContextSurfaceName {
                context_type: "PrimaryExpressionStartContext",
                listener_method: "primary_expression_start",
                visitor_method: "primary_expression_start",
            },
            rule_index: 0,
            alternative_label: None,
        },
        ContextViewName {
            surface: ContextSurfaceName {
                context_type: "ObjectCreationExpressionLabelContext",
                listener_method: "object_creation_expression_label",
                visitor_method: "object_creation_expression_label",
            },
            rule_index: 0,
            alternative_label: Some(
                "objectCreationExpression",
            ),
        },
        ContextViewName {
            surface: ContextSurfaceName {
                context_type: "ParenthesizedLabelContext",
                listener_method: "parenthesized_label",
                visitor_method: "parenthesized_label",
            },
            rule_index: 0,
            alternative_label: Some(
                "parenthesized",
            ),
        },
        ContextViewName {
            surface: ContextSurfaceName {
                context_type: "ObjectCreationExpressionContext",
                listener_method: "object_creation_expression",
                visitor_method: "object_creation_expression",
            },
            rule_index: 1,
            alternative_label: None,
        },
        ContextViewName {
            surface: ContextSurfaceName {
                context_type: "EveryRuleContext",
                listener_method: "every_rule_rule",
                visitor_method: "every_rule",
            },
            rule_index: 2,
            alternative_label: None,
        },
        ContextViewName {
            surface: ContextSurfaceName {
                context_type: "StoredTreeRuleContext",
                listener_method: "stored_tree",
                visitor_method: "stored_tree",
            },
            rule_index: 3,
            alternative_label: None,
        },
        ContextViewName {
            surface: ContextSurfaceName {
                context_type: "ValidatedTreeRuleContext",
                listener_method: "validated_tree",
                visitor_method: "validated_tree",
            },
            rule_index: 4,
            alternative_label: None,
        },
    ],
}
